--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -37,7 +37,9 @@
                 <i class="right fa fa-angle-left"></i>
               </p>
             </a>
-             <%= link_to I18n.t('views.button.delete'), agenda_path(id: agenda.id), method: :delete, class: 'btn btn-sm btn-danger agenda_delete' %>
+            <% if current_user == agenda.user || current_user == agenda.team.owner %>
+            <%= link_to I18n.t('views.button.delete'), agenda_path(id: agenda.id), method: :delete, class: 'btn btn-sm btn-danger agenda_delete' %>
+            <% end %>
             <ul class="nav nav-treeview" style="display: block;">
               <% agenda.articles.each do |article| %>
                 <li class="nav-item">
