--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -30,8 +30,8 @@
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <% @working_team.agendas.each do |agenda| %>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link">
-              <i class="fa fa-circle-o nav-icon"></i>
+            <a href="#" class="nav-link agenda_title">
+              <i class="fa fa-circle-o nav-icon "></i>
               <p>
                 <%= agenda.title %>
                 <i class="right fa fa-angle-left"></i>
