--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,7 @@
                       <td><%= assign.user.email %></td>
                       <td>
                         <% if current_user == assign.team.owner || assign.user == current_user  %>
-                        <%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %>
+                        <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
                         <% end %>
                       </td>
                       <td>
