--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -42,6 +42,11 @@
                       <td><%= image_tag 'default.jpg', size: '40x40' %></td>
                       <td><%= assign.user.email %></td>
                       <td><%= link_to I18n.t('views.button.delete'), team_assign_path(@team, assign), method: :delete, class: 'btn btn-sm btn-danger' %></td>
+                      <td>
+                      <% if current_user == assign.team.owner && assign.user != current_user  %>
+                      <%= link_to I18n.t('views.button.change_owner'), change_owner_team_path(@team, owner_id: assign.user_id), method: :patch, class: 'btn btn-sm btn-danger' %>
+                      <% end %>
+                      </td>
                     </tr>
                   <% end %>
                 </tbody>
